--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -3,7 +3,7 @@ html
   head
     link(rel="icon" type="image/ico" href="/images/favicon.ico")
     meta(name='viewport',content='width=device-width,initial-scale=1.0')
-    title= title
+    title=baslik
     link(rel='stylesheet', href='/bootstrap/css/sinan.bootstrap.css')
   body
    .navbar-default.navbar.navbar-fixed-tab
@@ -22,6 +22,6 @@ html
     block content
     footer
      .col-12
-      small &copy; Ömercan Akşen 2020
+      small &copy; #{footer} 2020
     script(src='/javascripts/jquery-3.5.1.min.js')
     script(src='/bootstrap/js/bootstrap.min.js')
