--- a/app_server/views/mekan-detay.pug
+++ b/app_server/views/mekan-detay.pug
@@ -49,14 +49,14 @@ block content
         a.btn.btn-default.pull-right(href='/mekan/' + mekanid + '/yorum/yeni') Yorum Ekle
         h2.panel-title Müşteri Yorumları
       .panel-body.review-container
-       each yorum in mekanBilgisi.yorumlar
-        .row
-         .review
-           .well.well-sm.review-header
-             span.rating
-              +puanOlustur(yorumYapan)
-             span.reviewAuthor=yorum.yorumYapan
-             | &nbsp;
-             small.reviewTimestamp=yorum.tarih
-           .col-xs-12
-              p=yorum.yorumMetni
+         each yorum in mekanBilgisi.yorumlar
+          .row
+           .review
+            .well.well-sm.review-header
+              span.rating
+                +puanOlustur(yorum.puan)
+              span.reviewAuthor #{yorum.yorumYapan},
+              small.reviewTimestamp
+                +tarihiFormatla(yorum.tarih)
+            .col-xs-12
+              p #{yorum.yorumMetni}
