--- a/app_server/views/ortak_fonksiyonlar/fonksiyonlar.pug
+++ b/app_server/views/ortak_fonksiyonlar/fonksiyonlar.pug
@@ -10,5 +10,5 @@ mixin tarihiFormatla(formatsizGun)
  -var gunBilgisi = gun.getDate();
  -var ayBilgisi= aylar[gun.getMonth()];
  -var yilBilgisi = gun.getFullYear();
- -var sonuc= gunBilgisi + ' ' + ' ' + ' ' + yilBilgisi;
+ -var sonuc= gunBilgisi + ' ' + ayBilgisi + ' ' + yilBilgisi;
  =sonuc
