--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -22,7 +22,7 @@ html
     block content
     footer
      .col-12
-      small &copy; #{footer} Ömercan Akşen 2021
+      small &copy; #{footer} 2021
     script(src='/javascripts/jquery-3.5.1.min.js')
     script(src='/bootstrap/js/bootstrap.min.js')
     script(src='/javascripts/denetle.js')
